# HypernetSwarm

./: .gitignore  README.md  __main__.py  audit.py  bootstrap.py  init_local.py  install-service.bat  install.bat  install.sh  pyproject.toml  server.py  setup.py  swarm_cli.py
_core/: __init__.py
hypernet_swarm/: __init__.py  _compat.py  companion.py  coordinator.py  git_coordinator.py  permissions.py  setup.py  swarm.py  swarm_factory.py  worker.py
