[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypernet-swarm"
version = "0.2.0"
description = "Multi-agent AI swarm orchestration with 13 LLM providers, boot sequences, identity, governance, and task management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Matt Schaeffer"},
    {name = "Hypernet AI Swarm"},
]
keywords = ["ai", "swarm", "multi-agent", "llm", "orchestration", "anthropic", "openai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# Full installation with all features
all = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pyyaml>=6.0",
    "pystray>=0.19.0",
    "Pillow>=10.0",
]
# Web dashboard
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
# System tray icon
local = [
    "pystray>=0.19.0",
    "Pillow>=10.0",
]
# Claude Code agent integration
claude-code = []  # No extra deps — uses the claude CLI
# Development and testing
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
# Use the installed hypernet-core package instead of bundled modules
core = [
    "hypernet-core",
]

[project.urls]
Homepage = "https://github.com/KosmoSuture/hypernet-swarm"
Repository = "https://github.com/KosmoSuture/hypernet-swarm"
Issues = "https://github.com/KosmoSuture/hypernet-swarm/issues"
Documentation = "https://github.com/KosmoSuture/UnityHypernet"

[project.scripts]
hypernet-swarm = "hypernet_swarm.__main__:main"

[tool.setuptools.packages.find]
include = ["hypernet_swarm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
